--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <h1>Blog Posts</h1>
-    
-
- 
+    <ul id="postList"></ul>
+    <form id="postForm">
+    <input type="text" id="title" placeholder="Title">
+    <textarea id="content" placeholder="Content"></textarea>
+    <input type="text" id="author" placeholder="Author">
+    <button type="submit">add post</button>
+    </form>
+ <script src="/scripts.js"></script>
 </body>
 </html>
